--- a/package.json
+++ b/package.json
@@ -1,3 +1,5 @@
+"homepage": "http://<username>.github.io/<repo-name>"
+
 {
   "name": "sfpopos",
   "version": "0.1.0",
@@ -18,6 +20,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
+    "predeploy": "npm run build",
+  "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
